chore: set ESM (type: module) and ensure serverless uses ESM

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "fusion-starter",
   "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "pkg": {
     "assets": [
       "dist/spa/*"
