--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   },
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "vercel-build": "vite build",
     "build:content": "node --env-file=.env scripts/generate-static-content.mjs",
-    "build": "npm run build:content && npm run build:client && npm run build:server",
-    "build:client": "vite build",
-    "build:server": "vite build --config vite.config.server.ts",
-    "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
