security: add .env.example, gitignore .env, document rotation

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,47 @@
-# Supabase Configuration
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
-SUPABASE_ANON_KEY=your-anon-key-here
+# Environment Variables Template
+#
+# Copy this file to .env and fill in your actual values
+# Never commit .env to version control - it contains secrets!
 
-# Other environment variables
-ALGOLIA_APP_ID=your-algolia-app-id
-ALGOLIA_API_KEY=your-algolia-api-key
-ALGOLIA_INDEX_NAME=gmProducts
+# =============================================================================
+# SUPABASE CONFIGURATION
+# =============================================================================
+# Get these from: https://app.supabase.com/project/YOUR_PROJECT/settings/api
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_ANON_KEY=
 
-# WooCommerce (if used)
-WOOCOMMERCE_BASE_URL=https://your-store.com
-WOOCOMMERCE_CONSUMER_KEY=your-consumer-key
-WOOCOMMERCE_CONSUMER_SECRET=your-consumer-secret
+# Client-side Supabase (safe to expose to browser)
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
 
-# Optional
-PING_MESSAGE=pong
-CHAT_PAGE_SIZE=12
+# =============================================================================
+# ALGOLIA SEARCH
+# =============================================================================
+# Get these from: https://dashboard.algolia.com/
+ALGOLIA_APP_ID=
+ALGOLIA_API_KEY=
+ALGOLIA_INDEX_NAME=
+
+# =============================================================================
+# OPENAI (Optional)
+# =============================================================================
+# Get API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+OPENAI_MODEL=
+
+# =============================================================================
+# WOOCOMMERCE (Optional)
+# =============================================================================
+# Get these from: WooCommerce → Settings → Advanced → REST API
+WOOCOMMERCE_BASE_URL=
+WOOCOMMERCE_CONSUMER_KEY=
+WOOCOMMERCE_CONSUMER_SECRET=
+
+# =============================================================================
+# OTHER CONFIGURATION
+# =============================================================================
+PING_MESSAGE=
+ALLOWED_ORIGINS=
+DISABLE_PII_LOGGING=
+VITE_PUBLIC_BUILDER_KEY=
