fix(vercel): update config for serverless functions, use npm not pnpm
- Use explicit installCommand: npm install
- Configure functions runtime for api/**/*.ts files
- Use rewrites instead of routes for SPA + API setup
- Fixes: ERR_PNPM_NO_IMPORTER_MANIFEST_FOUND

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "routes": [
+  "installCommand": "npm install",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  },
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
     }
   ]
 }
