--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "typescript": "^5.9.2",
     "vaul": "^1.1.2",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@vercel/node": "^3.0.12"
   }
 }
