chore(scripts): add local/prod smoke helpers

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "test": "vitest --run",
     "format.fix": "prettier --write .",
     "typecheck": "tsc",
-    "typecheck:ci": "tsc -p tsconfig.ci.json --noEmit"
+    "typecheck:ci": "tsc -p tsconfig.ci.json --noEmit",
+    "smoke:chat:local": "curl -s -X POST http://localhost:3000/api/gifts/chat -H 'Content-Type: application/json' -d '{\"query\":\"mug for dad\",\"topK\":8}'",
+    "smoke:diag:local": "curl -s http://localhost:3000/api/_diag/search-config",
+    "smoke:chat:prod": "node -e \"const u=process.env.PROD_URL||''; if(!u) {console.error('Set PROD_URL'); process.exit(1)}; const {execSync}=require('child_process'); console.log(execSync('curl -s -X POST '+u+'/api/gifts/chat -H \\'Content-Type: application/json\\' -d \\'{\\\\\"query\\\\\":\\\\\"mug for dad\\\\\",\\\\\"topK\\\\\":8}\\'').toString())\"",
+    "smoke:diag:prod": "node -e \"const u=process.env.PROD_URL||''; if(!u) {console.error('Set PROD_URL'); process.exit(1)}; const {execSync}=require('child_process'); console.log(execSync('curl -s '+u+'/api/_diag/search-config').toString())\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
